--- a/views/index.html
+++ b/views/index.html
@@ -106,7 +106,7 @@
                     All suggestions are welcome. This simple RESTful API is intended to be an 
                     example web service for students.
                 </p>
-                <a href="https://github.com/gitdagray" target="_blank">
+                <a href="https://github.com/gitdagray/rest_api_basics" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
                 <a href="https://youtube.com/davegrayteachescode" target="_blank">
