Added MDN CORS info link

--- a/views/index.html
+++ b/views/index.html
@@ -28,6 +28,7 @@
                     <li>HTTP Methods / Verbs  - <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods" target="_blank">Definition &amp; Discussion</a></li>
                     <li>HTTP Response Status Codes - <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Status" target="_blank">Listing of Codes</a></li>
                     <li>CRUD: Create, Read, Update, Delete - <a href="https://www.codecademy.com/articles/what-is-crud" target="_blank">Definition &amp; Discussion</a></li>
+                    <li>CORS: Cross-Origin Resource Sharing - <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS" target="_blank">Definition &amp; Discussion</a></li>
                 </ul>
             </section>
             <section>
